# codex-multi-account

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  README.md
backend/: pyproject.toml
backend/src/codex_multi_account/: __init__.py  app.py  config.py
backend/src/codex_multi_account/adapters/: __init__.py  codex_cli.py  openclaw.py
backend/src/codex_multi_account/api/: __init__.py  routes_accounts.py  routes_events.py  routes_overview.py  routes_scheduler.py  routes_settings.py  serializers.py
backend/src/codex_multi_account/models/: __init__.py  account.py  settings.py
backend/src/codex_multi_account/scheduler/: __init__.py  engine.py  runner.py
backend/src/codex_multi_account/services/: __init__.py  account_pool.py  login_session.py  probe_service.py  switch_service.py
backend/src/codex_multi_account/storage/: __init__.py  event_log.py  json_store.py
backend/src/codex_multi_account/utils/: api_profiles.py
backend/tests/: conftest.py  test_account_pool.py  test_api_accounts.py  test_api_overview.py  test_api_settings.py  test_app_static.py  test_codex_cli_adapter.py  test_config.py  test_login_session.py  test_openclaw_adapter.py  test_probe_service.py  test_scheduler_engine.py  test_scheduler_runner.py
docs/: 2026-04-02-codex-multi-account-design.md  2026-04-06-codex-openai-base-url-design.md  2026-04-06-codex-runtime-editor-design.md  runbook.md
plans/: 2026-04-02-codex-multi-account.md  2026-04-06-codex-openai-base-url.md  2026-04-06-codex-runtime-editor.md
scripts/: install-systemd-service.sh  run-codex-multi-account.sh  (+1 more)
(+22 files in other folders)
